tests/for/statement_placeholder.rz
for {} in 0..3 {} // error: missing variable name in 'for' loop